<?xml version="1.0" encoding="utf-8"?>

<!-- Author: Kayla Hoehn -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/inventory_logo"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="223dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="223dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:onClick="SignIn"
        android:enabled="false"/>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:onClick="CreateAccount"
        android:enabled="false"/>


</LinearLayout>